# sf_data_science

./: README.md  pyproject.toml
.github/workflows/: lint.yml
project_0/: README.md  game.ipynb  game.py  game_v2.py
project_1/: README.md  project-1.ipynb
