[tool.poetry]
name = "guess-number-task"
version = "0.0.1"
description = ""
authors = ["MAKHONIN Alexey <makhonin.a.ru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
numpy = "^1.26.0"
notebook = "^7.0.4"
jupyter = "^1.0.0"
jupyter-client = "^8.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
mypy = "^1.5.1"
black = "^23.9.1"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
